--- a/rules.conf
+++ b/rules.conf
@@ -1,4 +1,8 @@
+symple() -> from tkinter import *
+            from math import *
 func -> def
 show INPUT -> print(INPUT)
 ask INPUT -> input(INPUT)
 VAR: VALUE -> VAR = VALUE
+win NAME -> NAME = Tk()
+            NAME.title(NAME)
